parser.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1)
          + peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { main: peg$parsemain };
  var peg$startRuleFunction = peg$parsemain;

  var peg$c0 = "---";
  var peg$c1 = "//";
  var peg$c2 = "[";
  var peg$c3 = "]";
  var peg$c4 = ")";
  var peg$c5 = "choice";
  var peg$c6 = ":";
  var peg$c7 = ". ";
  var peg$c8 = "set";
  var peg$c9 = "to";
  var peg$c10 = "=";
  var peg$c11 = "label";
  var peg$c12 = "jump";
  var peg$c13 = " to";
  var peg$c14 = "nav";
  var peg$c15 = "navigate";
  var peg$c16 = "goto";
  var peg$c17 = "go";
  var peg$c18 = "teleport";
  var peg$c19 = "move";
  var peg$c20 = "new location";
  var peg$c21 = "else";
  var peg$c22 = " was chosen";
  var peg$c23 = "if";
  var peg$c24 = "elseif";
  var peg$c25 = "else if";
  var peg$c26 = "achievement";
  var peg$c27 = "continue";
  var peg$c28 = "then";
  var peg$c29 = "next";
  var peg$c30 = "show";
  var peg$c31 = "cg";
  var peg$c32 = "image";
  var peg$c33 = "illustration";
  var peg$c34 = "new";
  var peg$c35 = "objective";
  var peg$c36 = "complete";
  var peg$c37 = "lore";
  var peg$c38 = "+";
  var peg$c39 = "-";
  var peg$c40 = "*";
  var peg$c41 = "/";
  var peg$c42 = "(";
  var peg$c43 = "@";
  var peg$c44 = "true";
  var peg$c45 = "false";
  var peg$c46 = "\"";
  var peg$c47 = "input";
  var peg$c48 = "==";
  var peg$c49 = "equals";
  var peg$c50 = "is";
  var peg$c51 = "!=";
  var peg$c52 = "isn't";
  var peg$c53 = "<";
  var peg$c54 = "lt";
  var peg$c55 = "<=";
  var peg$c56 = "lte";
  var peg$c57 = ">";
  var peg$c58 = "gt";
  var peg$c59 = ">=";
  var peg$c60 = "gte";
  var peg$c61 = "&";
  var peg$c62 = "and";
  var peg$c63 = "|";
  var peg$c64 = "or";
  var peg$c65 = "++";
  var peg$c66 = "--";
  var peg$c67 = "_";
  var peg$c68 = "???";
  var peg$c69 = "'";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[\u2026.,-;!?\u2014#$%&*<>\/~+=()\u2019\u2018\u201C\u201D\u2665]/;
  var peg$r2 = /^[a-zA-Z]/;
  var peg$r3 = /^[\n\r]/;
  var peg$r4 = /^[ \t]/;

  var peg$e0 = peg$literalExpectation("---", false);
  var peg$e1 = peg$literalExpectation("//", false);
  var peg$e2 = peg$literalExpectation("[", false);
  var peg$e3 = peg$literalExpectation("]", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation("choice", true);
  var peg$e6 = peg$literalExpectation(":", false);
  var peg$e7 = peg$literalExpectation(". ", false);
  var peg$e8 = peg$literalExpectation("set", true);
  var peg$e9 = peg$literalExpectation("to", true);
  var peg$e10 = peg$literalExpectation("=", false);
  var peg$e11 = peg$literalExpectation("label", true);
  var peg$e12 = peg$literalExpectation("jump", true);
  var peg$e13 = peg$literalExpectation("to", false);
  var peg$e14 = peg$literalExpectation(" to", true);
  var peg$e15 = peg$literalExpectation("nav", true);
  var peg$e16 = peg$literalExpectation("navigate", true);
  var peg$e17 = peg$literalExpectation("goto", true);
  var peg$e18 = peg$literalExpectation("go", true);
  var peg$e19 = peg$literalExpectation("teleport", true);
  var peg$e20 = peg$literalExpectation("move", true);
  var peg$e21 = peg$literalExpectation("new location", true);
  var peg$e22 = peg$literalExpectation("else", true);
  var peg$e23 = peg$literalExpectation(" was chosen", true);
  var peg$e24 = peg$literalExpectation("if", true);
  var peg$e25 = peg$literalExpectation("elseif", true);
  var peg$e26 = peg$literalExpectation("else if", true);
  var peg$e27 = peg$literalExpectation("achievement", true);
  var peg$e28 = peg$literalExpectation("continue", true);
  var peg$e29 = peg$literalExpectation("then", true);
  var peg$e30 = peg$literalExpectation("next", true);
  var peg$e31 = peg$literalExpectation("show", true);
  var peg$e32 = peg$literalExpectation("cg", true);
  var peg$e33 = peg$literalExpectation("image", true);
  var peg$e34 = peg$literalExpectation("illustration", true);
  var peg$e35 = peg$literalExpectation("new", true);
  var peg$e36 = peg$literalExpectation("objective", true);
  var peg$e37 = peg$literalExpectation("complete", true);
  var peg$e38 = peg$literalExpectation("lore", true);
  var peg$e39 = peg$literalExpectation("+", false);
  var peg$e40 = peg$literalExpectation("-", false);
  var peg$e41 = peg$literalExpectation("*", false);
  var peg$e42 = peg$literalExpectation("/", false);
  var peg$e43 = peg$literalExpectation("(", false);
  var peg$e44 = peg$literalExpectation("@", false);
  var peg$e45 = peg$literalExpectation("true", true);
  var peg$e46 = peg$literalExpectation("false", true);
  var peg$e47 = peg$literalExpectation("\"", false);
  var peg$e48 = peg$literalExpectation("input", false);
  var peg$e49 = peg$literalExpectation("new", false);
  var peg$e50 = peg$literalExpectation("objective", false);
  var peg$e51 = peg$literalExpectation("complete", false);
  var peg$e52 = peg$literalExpectation("==", false);
  var peg$e53 = peg$literalExpectation("equals", false);
  var peg$e54 = peg$literalExpectation("is", false);
  var peg$e55 = peg$literalExpectation("!=", false);
  var peg$e56 = peg$literalExpectation("isn't", false);
  var peg$e57 = peg$literalExpectation("<", false);
  var peg$e58 = peg$literalExpectation("lt", false);
  var peg$e59 = peg$literalExpectation("<=", false);
  var peg$e60 = peg$literalExpectation("lte", false);
  var peg$e61 = peg$literalExpectation(">", false);
  var peg$e62 = peg$literalExpectation("gt", false);
  var peg$e63 = peg$literalExpectation(">=", false);
  var peg$e64 = peg$literalExpectation("gte", false);
  var peg$e65 = peg$literalExpectation("&", false);
  var peg$e66 = peg$literalExpectation("and", false);
  var peg$e67 = peg$literalExpectation("|", false);
  var peg$e68 = peg$literalExpectation("or", false);
  var peg$e69 = peg$literalExpectation("++", false);
  var peg$e70 = peg$literalExpectation("--", false);
  var peg$e71 = peg$literalExpectation("_", false);
  var peg$e72 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e73 = peg$literalExpectation("???", false);
  var peg$e74 = peg$classExpectation(["\u2026", ".", [",", ";"], "!", "?", "\u2014", "#", "$", "%", "&", "*", "<", ">", "/", "~", "+", "=", "(", ")", "\u2019", "\u2018", "\u201C", "\u201D", "\u2665"], false, false);
  var peg$e75 = peg$literalExpectation("'", false);
  var peg$e76 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e77 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e78 = peg$classExpectation([" ", "\t"], false, false);

  var peg$f0 = function(l) {return l};
  var peg$f1 = function() {return {"type":"nodeBreak"}};
  var peg$f2 = function(d) {return d};
  var peg$f3 = function(w) {return {"type": "narration", "text": w}};
  var peg$f4 = function(comm) { return {"type": "comment", "content": comm}; };
  var peg$f5 = function(code) { return {"type": "code", "code": code} };
  var peg$f6 = function(char, txt) { return {"type": "dialogue", "character": char, "text": txt} };
  var peg$f7 = function(l, t) { return {"type":"choice", "choice": l, "text": t} };
  var peg$f8 = function(v) {return {"type":"choice", "choice":v}};
  var peg$f9 = function(w) { return w.flat().join("")};
  var peg$f10 = function(l) {return l.join("")};
  var peg$f11 = function(n) { return {"name":n} };
  var peg$f12 = function(n, c) { return {"name": n, "emotion":c} };
  var peg$f13 = function(mr, n) {return `${mr}. ${n}` };
  var peg$f14 = function(v, l) {return `${v} = ${l}`};
  var peg$f15 = function(v, o, n) { return `${v} ${o}= ${n}`};
  var peg$f16 = function(v, d) { return `${v}${d}`};
  var peg$f17 = function(l) {return `Label: ${l}`};
  var peg$f18 = function(l) {return `Jump to ${l}`};
  var peg$f19 = function(l) {return `teleport to ${l.location}: ${l.state}`};
  var peg$f20 = function(l) {return `navigate to ${l.location}: ${l.state}`};
  var peg$f21 = function(l, s) {return {"location": l, "state":s}};
  var peg$f22 = function(l) {return {"location": l, "state":"default"}};
  var peg$f23 = function(i, e, c) {return `${i} ${e} then ${c}`};
  var peg$f24 = function(c) {return `else ${c}`};
  var peg$f25 = function(i, v) {return `${i} ${v} branch was chosen`};
  var peg$f26 = function(i, v, c, vv) {return `${i} ${v} ${c} ${vv} then continue to this branch`};
  var peg$f27 = function(v, c, l) {return `${v} ${c} ${l}`};
  var peg$f28 = function(v, c, vv) {return `${v} ${c} ${v}`};
  var peg$f29 = function(t) {return `Achievement: ${t}`};
  var peg$f30 = function(i) {return {"type":"image", "image":i}};
  var peg$f31 = function(t) {return {"type":"objective", "status":"new", "text":t}};
  var peg$f32 = function(t) {return {"type":"objective", "status":"completed", "text":t}};
  var peg$f33 = function(t) {return {"type":"lore", "text":t}};
  var peg$f34 = function(head, tail) {
      return tail.reduce(function(result, element) {
      if (element[1] === "+") { return result + element[3]; }
      if (element[1] === "-") { return result - element[3]; }
      }, head);
  };
  var peg$f35 = function(head, tail) {
      return tail.reduce(function(result, element) {
      if (element[1] === "*") { return result * element[3]; }
      if (element[1] === "/") { return result / element[3]; }
      }, head);
  };
  var peg$f36 = function(expr) { return expr; };
  var peg$f37 = function(v) {return v};
  var peg$f38 = function(v) {return v.join("")};
  var peg$f39 = function() {return true};
  var peg$f40 = function() {return false};
  var peg$f41 = function(str) {return str};
  var peg$f42 = function(neg, num) { return neg ? parseInt(num, 10) * -1 : parseInt(num, 10)};
  var peg$f43 = function(d) {return d.join("")};

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsemain() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parselines();
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parselines();
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselines() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseline();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsenl();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseline() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsenodebreak();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$parsecomment();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsecharacter();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsenl();
          if (s2 !== peg$FAILED) {
            s1 = [s1, s2];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parsebrackets();
          if (s0 === peg$FAILED) {
            s0 = peg$parsechoice();
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsedialogue();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$f2(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parsewords();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$f3(s1);
                }
                s0 = s1;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsenodebreak() {
    var s0;

    if (input.substr(peg$currPos, 3) === peg$c0) {
      s0 = peg$c0;
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsenl();
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsewords();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsebrackets() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecode();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 93) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechoice() {
    var s0;

    s0 = peg$parsenewChoice();
    if (s0 === peg$FAILED) {
      s0 = peg$parsechoiceVar();
    }

    return s0;
  }

  function peg$parsedialogue() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsecharacter();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsewords();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenewChoice() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsevarName();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 41) {
        s2 = peg$c4;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parsewords();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f7(s1, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsechoiceVar() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6).toLowerCase() === peg$c5) {
      s1 = input.substr(peg$currPos, 6);
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsevarName();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s4 = peg$c6;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f8(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsewords() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseword();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s4 = [s4, s5];
      s3 = s4;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseword();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f9(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseword() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewordChar();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsewordChar();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f10(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$parseinline();
    }

    return s0;
  }

  function peg$parsecharacter() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
